# deltav-bot

./: .gitignore  Cargo.toml
.sqlx/: query-0612f5ad1b6e8671d549bb8306dd60f2a2c412367b7defe14b461c7d45c87f0c.json  query-0dc2e944d59401bbf60be017b424e17e3c199a57ffcfd0c8a464628f42b2b7f4.json  query-105158682c2748910e776e1f5749b0100c27748b171ccab8671aab865fc1194b.json  query-1396fc1774fa83c457a628ecac1b4e3140531884ffdd12efbea14aa5ef2aa504.json  query-13a6efe22b05af47b9c45384e75ebd42781b0c9dc3fed007620a993b6207e84a.json  query-170d024b45aeed013eca1d6cb7cbfd3589c792b0f662dbb6e85c0488447b2811.json  query-1ff02718fba5e897128cbc4593a6e5223e1885f7ff42b497699c44d49c9cea66.json  query-2a23c259990fdcd39a22ad74f12335d720f67856fcee2b5324ab07beba0c8893.json  query-2f09621be9d4953085261b1453f74424ef7034f8ed4cd0dace9e4615dc894362.json  query-2ffef1dbca7207b8fe2dac65d2f812cdc7258b316354d63dad5ec4fe0d1ca397.json  query-301029d2b6f7808e991be9b73545d0a954bf79a921a267355ef4a9e28e8caccb.json  (+22 more)
deltav-bot/: Cargo.toml
deltav-bot/migrations/: 2026032901_initial_migration.sql  2026041201_add_cr_ping_role.sql  2026041202_add_cr_approved_denied_labels.sql
deltav-bot/src/: main.rs
deltav-bot/src/discord/: direction.rs  mod.rs  storage.rs
deltav-bot/src/discord/content_review/: component_events.rs  github_events.rs  mod.rs
deltav-bot/src/discord/content_review/data/: config.rs  discussions.rs  forums.rs  macros.rs
deltav-bot/src/discord/data/: config.rs  discussions.rs  forums.rs  mod.rs
deltav-bot/src/github/: mod.rs
src/: main.rs
src/relays/: mod.rs
