[package]
name = "deltav-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
fred = "10.1.0"
jsonwebtoken = "10.3.0"
octocrab = "0.49.6"
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.5"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
